force-app/main/default/objects/cve__Claim__c/cve__Claim__c.object-meta.xml
<CustomObject>
    <customHelpPage>cve__ClaimHelp</customHelpPage>
    <label>Claim</label>
    <nameField>
        <displayFormat>C-{YYYY}-{000000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>