force-app/main/default/objects/cve__Claim__c/fields/Broker_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Broker_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Consultant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims (Broker Consultant)</relationshipLabel>
    <relationshipName>Claims4</relationshipName>
    <type>Lookup</type>
</CustomField>