force-app/main/default/objects/cve__Claim__c/fields/Claim_Channel__c.field-meta.xml
<CustomField>
    <fullName>Claim_Channel__c</fullName>
    <label>Claim Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Living Benefit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>