force-app/main/default/objects/cve__Claim__c/fields/Claim_Contact__c.field-meta.xml
<CustomField>
    <fullName>Claim_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims (Claim Contact)</relationshipLabel>
    <relationshipName>Claims2</relationshipName>
    <type>Lookup</type>
</CustomField>