force-app/main/default/objects/cve__Claim__c/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <label>Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BC Claim</fullName>
            </value>
            <value>
                <fullName>C Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>