force-app/main/default/objects/cve__Claim__c/fields/ClaimEventLogTrigger__c.field-meta.xml
<CustomField>
    <fullName>ClaimEventLogTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ClaimEventLogTrigger</label>
    <type>Checkbox</type>
</CustomField>