force-app/main/default/objects/cve__Claim__c/fields/Contract_Validation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Validation_Start_Date__c</fullName>
    <label>Contract Validation Start Date</label>
    <type>Date</type>
</CustomField>