force-app/main/default/objects/cve__Claim__c/fields/Contraction_Validation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contraction_Validation_End_Date__c</fullName>
    <label>Contraction Validation End Date</label>
    <type>Date</type>
</CustomField>