force-app/main/default/objects/cve__Claim__c/fields/cve__Acknowledgment__c.field-meta.xml
<CustomField>
    <fullName>cve__Acknowledgment__c</fullName>
    <label>Acknowledgment</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>