force-app/main/default/objects/cve__Claim__c/fields/cve__AllRequiredDocumentsReceived__c.field-meta.xml
<CustomField>
    <fullName>cve__AllRequiredDocumentsReceived__c</fullName>
    <inlineHelpText>Set to the latest Received date of all Required Documents when all Required Documents have their Received date set and Accepted checkbox checked</inlineHelpText>
    <label>All Required Documents Received</label>
    <type>Date</type>
</CustomField>