force-app/main/default/objects/cve__Claim__c/fields/cve__AnticipatedClose__c.field-meta.xml
<CustomField>
    <fullName>cve__AnticipatedClose__c</fullName>
    <label>Anticipated Close</label>
    <type>Date</type>
</CustomField>