force-app/main/default/objects/cve__Claim__c/fields/cve__BenefitSummary__c.field-meta.xml
<CustomField>
    <fullName>cve__BenefitSummary__c</fullName>
    <label>Benefit Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>