force-app/main/default/objects/cve__Claim__c/fields/cve__BenefitType__c.field-meta.xml
<CustomField>
    <fullName>cve__BenefitType__c</fullName>
    <label>Benefit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>