force-app/main/default/objects/cve__Claim__c/fields/cve__ClaimantInsured__c.field-meta.xml
<CustomField>
    <fullName>cve__ClaimantInsured__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>First Claimant/Insured Person (Contact). Edit via Claim Relationship objects.</inlineHelpText>
    <label>Claimant/Insured</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ClaimantInsuredClaims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>