force-app/main/default/objects/cve__Claim__c/fields/cve__ClaimantInsuredAccount__c.field-meta.xml
<CustomField>
    <fullName>cve__ClaimantInsuredAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claimant/Insured Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>