force-app/main/default/objects/cve__Claim__c/fields/cve__ClaimantInsuredAccountName__c.field-meta.xml
<CustomField>
    <fullName>cve__ClaimantInsuredAccountName__c</fullName>
    <label>Claimant/Insured Organization Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>