force-app/main/default/objects/cve__Claim__c/fields/cve__ClaimLevelJournal__c.field-meta.xml
<CustomField>
    <fullName>cve__ClaimLevelJournal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Level Journal</label>
    <type>Checkbox</type>
</CustomField>