force-app/main/default/objects/cve__Claim__c/fields/cve__ClaimLevelPaymentSpecification__c.field-meta.xml
<CustomField>
    <fullName>cve__ClaimLevelPaymentSpecification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Level Payment Specification</label>
    <type>Checkbox</type>
</CustomField>