force-app/main/default/objects/cve__Claim__c/fields/cve__ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>cve__ClosedDate__c</fullName>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>