force-app/main/default/objects/cve__Claim__c/fields/cve__DateOfDeath__c.field-meta.xml
<CustomField>
    <fullName>cve__DateOfDeath__c</fullName>
    <inlineHelpText>Value is from Benefit Claimed</inlineHelpText>
    <label>Date of Death</label>
    <summarizedField>cve__BenefitClaimed__c.cve__DateOfDeath__c</summarizedField>
    <summaryForeignKey>cve__BenefitClaimed__c.cve__Claim__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>