force-app/main/default/objects/cve__Claim__c/fields/cve__DateOfDisability__c.field-meta.xml
<CustomField>
    <fullName>cve__DateOfDisability__c</fullName>
    <inlineHelpText>Value is from Benefit Claimed</inlineHelpText>
    <label>Date of Disability</label>
    <summarizedField>cve__BenefitClaimed__c.cve__DateOfDisability__c</summarizedField>
    <summaryForeignKey>cve__BenefitClaimed__c.cve__Claim__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>