force-app/main/default/objects/cve__Claim__c/fields/cve__DateReceived__c.field-meta.xml
<CustomField>
    <fullName>cve__DateReceived__c</fullName>
    <inlineHelpText>Value is from Benefit Claimed</inlineHelpText>
    <label>Date Received</label>
    <summarizedField>cve__BenefitClaimed__c.cve__DateReceived__c</summarizedField>
    <summaryForeignKey>cve__BenefitClaimed__c.cve__Claim__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>