force-app/main/default/objects/cve__Claim__c/fields/cve__Event__c.field-meta.xml
<CustomField>
    <fullName>cve__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>cvb__Event__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>