force-app/main/default/objects/cve__Claim__c/fields/cve__IncompleteDate__c.field-meta.xml
<CustomField>
    <fullName>cve__IncompleteDate__c</fullName>
    <description>The date Claim status is firstly changed to Incomplete</description>
    <label>Incomplete Date</label>
    <type>Date</type>
</CustomField>