force-app/main/default/objects/cve__Claim__c/fields/cve__IncurredLastCalculated__c.field-meta.xml
<CustomField>
    <fullName>cve__IncurredLastCalculated__c</fullName>
    <label>Incurred Last Calculated</label>
    <type>DateTime</type>
</CustomField>