force-app/main/default/objects/cve__Claim__c/fields/cve__InquiryPortalUrl__c.field-meta.xml
<CustomField>
    <fullName>cve__InquiryPortalUrl__c</fullName>
    <formula>IF(
$Setup.cve__ClaimInquiryOptions__c.cve__SiteUrl__c != null &amp;&amp; cve__OpaqueId__c != null,
$Setup.cve__ClaimInquiryOptions__c.cve__SiteUrl__c + &apos;?key=&apos; + cve__OpaqueId__c,
null
)</formula>
    <inlineHelpText>URL that customers use to inquire about their claims</inlineHelpText>
    <label>Inquiry Portal URL</label>
    <type>Text</type>
</CustomField>