force-app/main/default/objects/cve__Claim__c/fields/cve__LiabilityNet__c.field-meta.xml
<CustomField>
    <fullName>cve__LiabilityNet__c</fullName>
    <label>Liability Net</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>