force-app/main/default/objects/cve__Claim__c/fields/cve__MedicareLevyExemption__c.field-meta.xml
<CustomField>
    <fullName>cve__MedicareLevyExemption__c</fullName>
    <label>Medicare Levy Exemption</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Half</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>