force-app/main/default/objects/cve__Claim__c/fields/cve__NetworkId__c.field-meta.xml
<CustomField>
    <fullName>cve__NetworkId__c</fullName>
    <inlineHelpText>When a Claim is created by an Experience/Community, this Network ID is populated and Workflow sets it on any ContentVersion records created so they can be viewed in the Experience/Community</inlineHelpText>
    <label>Network ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>