force-app/main/default/objects/cve__Claim__c/fields/cve__OpaqueId__c.field-meta.xml
<CustomField>
    <fullName>cve__OpaqueId__c</fullName>
    <inlineHelpText>An Id value assigned and used in combination with other security measures for customer claim inquiries</inlineHelpText>
    <label>Opaque Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>