force-app/main/default/objects/cve__Claim__c/fields/cve__OpaqueIdValidThrough__c.field-meta.xml
<CustomField>
    <fullName>cve__OpaqueIdValidThrough__c</fullName>
    <inlineHelpText>Date after which the Opaque Id is no longer valid</inlineHelpText>
    <label>Opaque Id Valid Through</label>
    <type>Date</type>
</CustomField>