force-app/main/default/objects/cve__Claim__c/fields/cve__OpenRequiredTaskCount__c.field-meta.xml
<CustomField>
    <fullName>cve__OpenRequiredTaskCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Open Required Task Count</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>