force-app/main/default/objects/cve__Claim__c/fields/cve__OriginalName__c.field-meta.xml
<CustomField>
    <fullName>cve__OriginalName__c</fullName>
    <label>Original Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>