force-app/main/default/objects/cve__Claim__c/fields/cve__PayAndClose__c.field-meta.xml
<CustomField>
    <fullName>cve__PayAndClose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay and Close</label>
    <type>Checkbox</type>
</CustomField>