force-app/main/default/objects/cve__Claim__c/fields/cve__PendingDate__c.field-meta.xml
<CustomField>
    <fullName>cve__PendingDate__c</fullName>
    <label>Pending Date</label>
    <type>Date</type>
</CustomField>