force-app/main/default/objects/cve__Claim__c/fields/cve__PerformanceGuarantee__c.field-meta.xml
<CustomField>
    <fullName>cve__PerformanceGuarantee__c</fullName>
    <formula>IF(cve__Policy__r.cve__PerformanceGuarantee__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance Guarantee</label>
    <type>Text</type>
</CustomField>