force-app/main/default/objects/cve__Claim__c/fields/cve__Policy__c.field-meta.xml
<CustomField>
    <fullName>cve__Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>cve__Policy__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>