force-app/main/default/objects/cve__Claim__c/fields/cve__PolicyNames__c.field-meta.xml
<CustomField>
    <fullName>cve__PolicyNames__c</fullName>
    <description>This will displays Policy names that are associated with Benefit Claimed of the Claim</description>
    <label>Policy Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>