force-app/main/default/objects/cve__Claim__c/fields/cve__PolicyPremiumPaidThrough__c.field-meta.xml
<CustomField>
    <fullName>cve__PolicyPremiumPaidThrough__c</fullName>
    <formula>cve__Policy__r.cve__PremiumPaidThrough__c</formula>
    <label>Policy Premium Paid Through</label>
    <type>Date</type>
</CustomField>