force-app/main/default/objects/cve__Claim__c/fields/cve__PolicyRelationship__c.field-meta.xml
<CustomField>
    <fullName>cve__PolicyRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Relationship</label>
    <referenceTo>cve__PolicyRelationship__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>