force-app/main/default/objects/cve__Claim__c/fields/cve__PrecedingClaim__c.field-meta.xml
<CustomField>
    <fullName>cve__PrecedingClaim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Typically the Claim this Claim was copied from.</inlineHelpText>
    <label>Preceding Claim</label>
    <referenceTo>cve__Claim__c</referenceTo>
    <relationshipLabel>Succeeding Claims</relationshipLabel>
    <relationshipName>SucceedingClaims</relationshipName>
    <type>Lookup</type>
</CustomField>