force-app/main/default/objects/cve__Claim__c/fields/cve__PreDisabilityEarnings__c.field-meta.xml
<CustomField>
    <fullName>cve__PreDisabilityEarnings__c</fullName>
    <label>Pre-Disability Earnings</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>