force-app/main/default/objects/cve__Claim__c/fields/cve__PreDisabilityEarningsPeriod__c.field-meta.xml
<CustomField>
    <fullName>cve__PreDisabilityEarningsPeriod__c</fullName>
    <label>Pre-Disability Earnings Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Year</fullName>
                <default>true</default>
                <label>Year</label>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Semi-Month</fullName>
            </value>
            <value>
                <fullName>Bi-Week</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>