force-app/main/default/objects/cve__Claim__c/fields/cve__ProgressEventCorrelationId__c.field-meta.xml
<CustomField>
    <fullName>cve__ProgressEventCorrelationId__c</fullName>
    <inlineHelpText>Progress Events are generated when this is not empty; typically set by external logic</inlineHelpText>
    <label>Progress Event Correlation Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>