force-app/main/default/objects/cve__Claim__c/fields/cve__QuestionsLanguage__c.field-meta.xml
<CustomField>
    <fullName>cve__QuestionsLanguage__c</fullName>
    <label>Questions Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>