force-app/main/default/objects/cve__Claim__c/fields/cve__Reopened__c.field-meta.xml
<CustomField>
    <fullName>cve__Reopened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reopened</label>
    <type>Checkbox</type>
</CustomField>