force-app/main/default/objects/cve__Claim__c/fields/cve__ReopenedDate__c.field-meta.xml
<CustomField>
    <fullName>cve__ReopenedDate__c</fullName>
    <label>Reopened Date</label>
    <type>DateTime</type>
</CustomField>