force-app/main/default/objects/cve__Claim__c/fields/cve__ReturnToWorkDate__c.field-meta.xml
<CustomField>
    <fullName>cve__ReturnToWorkDate__c</fullName>
    <inlineHelpText>Value is from latest Return to Work</inlineHelpText>
    <label>Return to Work Date</label>
    <type>Date</type>
</CustomField>