force-app/main/default/objects/cve__Claim__c/fields/cve__ReturnToWorkType__c.field-meta.xml
<CustomField>
    <fullName>cve__ReturnToWorkType__c</fullName>
    <inlineHelpText>Value is from latest Return to Work</inlineHelpText>
    <label>Return to Work Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>