force-app/main/default/objects/cve__Claim__c/fields/cve__Statutory__c.field-meta.xml
<CustomField>
    <fullName>cve__Statutory__c</fullName>
    <formula>cve__StatutoryCount__c  &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statutory</label>
    <type>Checkbox</type>
</CustomField>