force-app/main/default/objects/cve__Claim__c/fields/cve__StatutoryCount__c.field-meta.xml
<CustomField>
    <fullName>cve__StatutoryCount__c</fullName>
    <label>Statutory Count</label>
    <summaryFilterItems>
        <field>cve__BenefitClaimed__c.cve__BenefitStatutory__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>cve__BenefitClaimed__c.cve__Claim__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>