force-app/main/default/objects/cve__Claim__c/fields/cve__TaxFreeThreshold__c.field-meta.xml
<CustomField>
    <fullName>cve__TaxFreeThreshold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Free Threshold</label>
    <type>Checkbox</type>
</CustomField>