force-app/main/default/objects/cve__Claim__c/fields/cve__ToBeIncurredNet__c.field-meta.xml
<CustomField>
    <fullName>cve__ToBeIncurredNet__c</fullName>
    <label>To Be Incurred Net</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>