force-app/main/default/objects/cve__Claim__c/fields/cve__TotalCoverageAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalCoverageAmount__c</fullName>
    <label>Total Approved Coverage Amount</label>
    <summarizedField>cve__BenefitClaimed__c.cve__CoverageAmount__c</summarizedField>
    <summaryFilterItems>
        <field>cve__BenefitClaimed__c.cve__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>cve__BenefitClaimed__c.cve__Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>