force-app/main/default/objects/cve__Claim__c/fields/cve__TotalIncurred__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalIncurred__c</fullName>
    <label>Total Incurred Before Taxes</label>
    <summarizedField>cve__BenefitClaimed__c.cve__TotalIncurred__c</summarizedField>
    <summaryForeignKey>cve__BenefitClaimed__c.cve__Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>