force-app/main/default/objects/cve__Claim__c/fields/cve__TotalIncurredAsOf__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalIncurredAsOf__c</fullName>
    <label>Total Incurred as of</label>
    <summarizedField>cve__BenefitClaimed__c.cve__TotalIncurredAsOf__c</summarizedField>
    <summaryForeignKey>cve__BenefitClaimed__c.cve__Claim__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>