force-app/main/default/objects/cve__Claim__c/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deceased</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims (Deceased)</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>