force-app/main/default/objects/cve__Claim__c/fields/Intermediary__c.field-meta.xml
<CustomField>
    <fullName>Intermediary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intermediary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims (Intermediary)</relationshipLabel>
    <relationshipName>Claims3</relationshipName>
    <type>Lookup</type>
</CustomField>