force-app/main/default/objects/cve__Claim__c/fields/KTA_Code__c.field-meta.xml
<CustomField>
    <fullName>KTA_Code__c</fullName>
    <label>KTA Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>