force-app/main/default/objects/cve__Claim__c/fields/Policy_Holder__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims (Policy Holder)</relationshipLabel>
    <relationshipName>Claims6</relationshipName>
    <type>Lookup</type>
</CustomField>