force-app/main/default/objects/cve__Claim__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims (Reported By)</relationshipLabel>
    <relationshipName>Claims1</relationshipName>
    <type>Lookup</type>
</CustomField>