force-app/main/default/objects/cve__Claim__c/fields/Terminal_Illness_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Illness_Diagnosis_Date__c</fullName>
    <label>Terminal Illness Diagnosis Date</label>
    <type>Date</type>
</CustomField>