force-app/main/default/objects/cve__Claim__c/fields/Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Third_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims (Third Party)</relationshipLabel>
    <relationshipName>Claims5</relationshipName>
    <type>Lookup</type>
</CustomField>