force-app/main/default/objects/cve__Claim__c/listViews/cve__All.listView-meta.xml
<ListView>
    <fullName>cve__All</fullName>
    <columns>NAME</columns>
    <columns>cve__ClaimantInsuredName__c</columns>
    <columns>cve__BenefitType__c</columns>
    <columns>cve__Status__c</columns>
    <columns>cve__Policy__c</columns>
    <columns>Claim_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>